--- a/services/svc-pinger/package.json
+++ b/services/svc-pinger/package.json
@@ -13,5 +13,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.12.1"
+  "packageManager": "pnpm@10.12.1",
+  "dependencies": {},
+  "engines": {
+    "node": "^20.19.0",
+    "pnpm": "^10.12.1",
+    "yarn": "use pnpm indtead",
+    "npm": "use pnpm instead"
+  },
+  "volta": {
+    "node": "20.19.4",
+    "pnpm": "10.12.1"
+  }
 }
