--- a/services/svc-pinger/package.json
+++ b/services/svc-pinger/package.json
@@ -14,7 +14,14 @@
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.12.1",
-  "dependencies": {},
+  "dependencies": {
+    "@types/express": "^5.0.3",
+    "@types/node-fetch": "^2.6.13",
+    "@types/supertest": "^6.0.3",
+    "express": "^5.1.0",
+    "node-fetch": "^3.3.2",
+    "supertest": "^7.1.4"
+  },
   "engines": {
     "node": "^20.19.0",
     "pnpm": "^10.12.1",
