--- a/services/svc-pinger/package.json
+++ b/services/svc-pinger/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "private": true,
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "lint": "biome check src/"
   },
@@ -16,10 +17,8 @@
   "packageManager": "pnpm@10.12.1",
   "dependencies": {
     "@types/express": "^5.0.3",
-    "@types/node-fetch": "^2.6.13",
     "@types/supertest": "^6.0.3",
     "express": "^5.1.0",
-    "node-fetch": "^3.3.2",
     "supertest": "^7.1.4"
   },
   "engines": {
