--- a/services/svc-pinger/package.json
+++ b/services/svc-pinger/package.json
@@ -9,17 +9,20 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "lint": "biome check src/"
+    "lint": "biome check src/",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.12.1",
   "dependencies": {
+    "@types/axios": "^0.14.4",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/supertest": "^6.0.3",
-    "express": "^5.1.0",
-    "supertest": "^7.1.4"
+    "axios": "^1.11.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0"
   },
   "engines": {
     "node": "^20.19.0",
