PUL-2: add biome config, apply basic style fixes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,11 +12,6 @@
       "@checkpulse/*": ["services/*/src"]
     }
   },
-  "include": [
-    "services/**/*"
-  ],
-  "exclude": [
-    "**/dist",
-    "**/node_modules"
-  ]
+  "include": ["services/**/*"],
+  "exclude": ["**/dist", "**/node_modules"]
 }
