--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preinstall": "npx only-allow pnpm",
     "dev:svc-pinger": "pnpm --filter @checkpulse/svc-pinger dev",
     "test": "vitest run",
-    "lint": "biome check . "
+    "lint": "biome check"
   },
   "keywords": [],
   "author": "",
