--- a/services/svc-pinger/package.json
+++ b/services/svc-pinger/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "lint": "biome check src/",
+    "lint": "biome check",
     "test": "vitest"
   },
   "keywords": [],
