--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "engines": {
     "node": "^20.19.0",
     "pnpm": "^10.12.1",
-    "yarn": "use pnpm indtead",
+    "yarn": "use pnpm instead",
     "npm": "use pnpm instead"
   },
   "volta": {
