--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "private": true,
   "scripts": {
     "preinstall": "npx only-allow pnpm",
+    "dev:svc-pinger": "pnpm --filter @checkpulse/svc-pinger dev",
     "test": "vitest run",
-    "lint": "biome check . --apply"
+    "lint": "biome check"
   },
   "keywords": [],
   "author": "",
@@ -16,18 +17,24 @@
   "devDependencies": {
     "@biomejs/biome": "^2.2.0",
     "@types/node": "^24.3.0",
+    "nock": "^14.0.10",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.4",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
   },
   "engines": {
     "node": "^20.19.0",
     "pnpm": "^10.12.1",
-    "yarn": "use pnpm indtead",
+    "yarn": "use pnpm instead",
     "npm": "use pnpm instead"
   },
   "volta": {
     "node": "20.19.4",
     "pnpm": "10.12.1"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.1",
+    "zod": "^4.0.17"
   }
 }
