--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,15 +3,22 @@
     "target": "ES2020",
     "module": "ES2020",
     "moduleResolution": "node",
-    "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "@checkpulse/*": ["services/*/src"]
+      "@checkpulse/*": ["services/*/src", "packages/*/src"]
     }
   },
   "include": ["services/**/*"],
-  "exclude": ["**/dist", "**/node_modules"]
+  "exclude": ["**/dist", "**/node_modules"],
+  "references": [
+    {
+      "path": "./packages/logger"
+    },
+    {
+      "path": "./services/pinger"
+    }
+  ]
 }
