--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "turbo run dev",
     "build": "turbo run build",
     "start": "turbo run start",
-    "test": "vitest run",
+    "test": "turbo run test",
     "lint": "turbo run lint",
     "format": "biome format --write"
   },
