--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "type": "module",
   "private": true,
+  "main": "dist/index.cjs",
   "exports": {
     ".": {
       "types": "./src/index.ts",
@@ -14,16 +15,21 @@
     "entry": [
       "src/index.ts"
     ],
+    "format": [
+      "esm",
+      "cjs"
+    ],
     "splitting": false,
     "sourcemap": true,
-    "clean": true
+    "clean": true,
+    "skipNodeModulesBundle": true,
+    "target": "node20"
   },
   "scripts": {
     "build": "tsup",
-    "start": "node dist/server.cjs",
+    "build:types": " tsc --emitDeclarationOnly --outDir dist",
     "lint": "biome check",
     "format": "biome format --write",
-    "test": "vitest",
     "clean:build": "rm -rf ./dist"
   },
   "packageManager": "pnpm@10.12.1",
