--- a/packages/logger/tsconfig.json
+++ b/packages/logger/tsconfig.json
@@ -11,8 +11,10 @@
     "composite": true,
     "tsBuildInfoFile": "./dist/.tsbuildinfo",
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "declarationMap": true,
+    "emitDeclarationOnly": false
   },
   "include": ["src/**/*"],
-  "exclude": ["**/dist", "**/node_modules", "**/*.test.ts", "**/*.spec.ts"]
+  "exclude": ["**/dist", "**/node_modules", "**/*.test.ts"]
 }
