--- a/services/pinger/.env
+++ b/services/pinger/.env
@@ -1,3 +1,9 @@
+SERVICE_NAME = 'pinger'
 SERVICE_PINGER_PORT=3000
 MAX_TIMEOUT=60000
 DEFAULT_TIMEOUT=30000
+
+DB_USER_NAME=
+DB_PASSWORD=
+DB_NAME=
+DB_URL=
