--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,6 +3,7 @@
     "target": "ES2020",
     "module": "ES2020",
     "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
@@ -11,7 +12,7 @@
       "@checkpulse/*": ["services/*/src", "packages/*/src"]
     }
   },
-  "include": ["services/**/*"],
+  "include": ["services/**/*", "packages/**/*"],
   "exclude": ["**/dist", "**/node_modules"],
   "references": [
     {
