--- a/turbo.json
+++ b/turbo.json
@@ -12,6 +12,9 @@
       "persistent": true,
       "cache": false
     },
+    "test": {
+      "dependsOn": ["^test"]
+    },
     "lint": {
       "dependsOn": ["^lint"]
     },
