--- a/services/pinger/package.json
+++ b/services/pinger/package.json
@@ -36,7 +36,8 @@
   "devDependencies": {
     "@types/axios": "^0.14.4",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3"
+    "@types/express": "^5.0.3",
+    "@types/mongodb": "^4.0.7"
   },
   "engines": {
     "node": "^20.19.0",
