--- a/services/pinger/.env
+++ b/services/pinger/.env
@@ -2,7 +2,7 @@ SERVICE_NAME = 'pinger'
 SERVICE_PINGER_PORT=3000
 MAX_TIMEOUT=60000
 DEFAULT_TIMEOUT=30000
-
+HOST_URL='localhost'
 DB_USER_NAME=
 DB_PASSWORD=
 DB_NAME=
