--- a/packages/logger/tsconfig.json
+++ b/packages/logger/tsconfig.json
@@ -8,13 +8,17 @@
     "outDir": "./dist",
     "declaration": true,
     "sourceMap": true,
-    "composite": true,
+    "composite": false,
     "tsBuildInfoFile": "./dist/.tsbuildinfo",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "declarationMap": true,
-    "emitDeclarationOnly": false
+    "emitDeclarationOnly": false,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
-  "include": ["src/**/*"],
-  "exclude": ["**/dist", "**/node_modules", "**/*.test.ts"]
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "exclude": ["node_modules", "dist"]
 }
