--- a/services/pinger/tsconfig.json
+++ b/services/pinger/tsconfig.json
@@ -8,13 +8,8 @@
     "outDir": "./dist",
     "declaration": true,
     "sourceMap": true,
-    "composite": true,
-    "tsBuildInfoFile": "./dist/.tsbuildinfo",
-    "paths": {
-      "@checkpulse/logger": ["../../packages/logger/src"],
-      "@checkpulse/*": ["../../packages/*/src"]
-    }
+    "composite": false
   },
-  "include": ["src/**/*", "../../packages/**/*"],
+  "include": ["src/**/*.ts"],
   "exclude": ["**/dist", "**/node_modules"]
 }
