--- a/turbo.json
+++ b/turbo.json
@@ -13,7 +13,8 @@
       "cache": false
     },
     "test": {
-      "dependsOn": ["^test"]
+      "dependsOn": ["^test"],
+      "cache": false
     },
     "lint": {
       "dependsOn": ["^lint"]
