--- a/biome.json
+++ b/biome.json
@@ -37,12 +37,7 @@
     "enabled": true
   },
   "files": {
-    "includes": [
-      "**",
-      "!**/dist",
-      "!**/*.generated.js",
-      "!**/node_modules"
-    ]
+    "includes": ["**", "!**/dist", "!**/*.generated.js", "!**/node_modules"]
   },
   "vcs": {
     "enabled": true,
