--- a/services/pinger/package.json
+++ b/services/pinger/package.json
@@ -25,13 +25,15 @@
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mongodb": "^6.18.0"
+    "mongodb": "^6.18.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.4",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/mongodb": "^4.0.7"
+    "@types/mongodb": "^4.0.7",
+    "@types/uuid": "^10.0.0"
   },
   "engines": {
     "node": "^20.19.0",
